--- a/final/FinalProject/FinalProject.csproj
+++ b/final/FinalProject/FinalProject.csproj
@@ -8,4 +8,8 @@
     <Nullable>disable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="iTextSharp" Version="5.5.13.2" />
+  </ItemGroup>
+
 </Project>
